[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.*"
reqwest = "0.12.*"

[[bin]]
name = "web-server"
path = "src/web-server.rs"

[[bin]]
name = "ddos-protection"
path = "src/ddos-protection.rs"
