[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.*"
reqwest = "0.12.*"
rust-embed = "8.3.*"
openssl = { version = "0.10.*", features = ["vendored"] }

[[bin]]
name = "rocket-web-server"
path = "src/rocket-web-server.rs"

[[bin]]
name = "simple-web-server"
path = "src/simple-web-server.rs"

[[bin]]
name = "ddos-protection"
path = "src/ddos-protection.rs"
